--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^6.1.1",
+    "@quasar/extras": "^1.14.2",
     "axios": "^0.21.1",
-    "vue-i18n": "^9.0.0",
+    "chart.js": "^3.8.0",
+    "moment": "^2.29.4",
     "pinia": "^2.0.11",
-    "@quasar/extras": "^1.0.0",
-    "quasar": "^2.6.0",
+    "pinia-plugin-persistedstate": "^1.6.1",
+    "quasar": "^2.7.5",
     "vue": "^3.0.0",
+    "vue-chartkick": "^1.1.0",
+    "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.0.0",
-    "autoprefixer": "^10.4.2"
+    "@quasar/app-vite": "^1.0.5",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
